--- a/CyberSecurityWeb/test-output/index.html
+++ b/CyberSecurityWeb/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\LSP\AppData\Local\Temp\testng-eclipse--1210083994\testng-customsuite.xml</span>
+                    <span>C:\Users\LSP\AppData\Local\Temp\testng-eclipse--712700560\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -195,14 +195,14 @@
                   <a name="test_login">
                   </a> <!-- test_login -->
                   <span class="method-name">test_login</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: Unable to locate element: #\#id_birth_date
-For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
+                  <div class="stack-trace">org.openqa.selenium.ElementNotInteractableException: Element &lt;a class=&quot;dropdown-item ps-3&quot; href=&quot;//main.techforing.com/account/logout/&quot;&gt; could not be scrolled into view
 Build info: version: &apos;4.8.1&apos;, revision: &apos;8ebccac989&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.6&apos;
 Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [77bf30c2-814b-4ada-aca4-b0db939f4548, findElement {using=id, value=#id_birth_date}]
-Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 111.0.1, moz:accessibilityChecks: false, moz:buildID: 20230321111920, moz:debuggerAddress: 127.0.0.1:31463, moz:geckodriverVersion: 0.32.2, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 3604, moz:profile: C:\Users\LSP\AppData\Local\..., moz:shutdownTimeout: 60000, moz:useNonSpecCompliantPointerOrigin: false, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://127.0.0.1:31463/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
-Session ID: 77bf30c2-814b-4ada-aca4-b0db939f4548
+Command: [df5b2b36-a1c3-4b0f-9c85-cbe6fabe56f4, clickElement {id=b5307b7e-012b-48b1-980a-f16c0e347340}]
+Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 111.0.1, moz:accessibilityChecks: false, moz:buildID: 20230321111920, moz:debuggerAddress: 127.0.0.1:35549, moz:geckodriverVersion: 0.32.2, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 6040, moz:profile: C:\Users\LSP\AppData\Local\..., moz:shutdownTimeout: 60000, moz:useNonSpecCompliantPointerOrigin: false, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://127.0.0.1:35549/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
+Element: [[FirefoxDriver: firefox on WINDOWS (df5b2b36-a1c3-4b0f-9c85-cbe6fabe56f4)] -&gt; css selector: [href=&apos;//main.techforing.com/account/logout/&apos;]]
+Session ID: df5b2b36-a1c3-4b0f-9c85-cbe6fabe56f4
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -215,11 +215,9 @@ Session ID: 77bf30c2-814b-4ada-aca4-b0db939f4548
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:543)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:162)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:66)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:352)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:344)
-	at signIn.test_login(signIn.java:75)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:257)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:78)
+	at signIn.test_login(signIn.java:95)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -272,7 +270,7 @@ Session ID: 77bf30c2-814b-4ada-aca4-b0db939f4548
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\LSP\AppData\Local\Temp\testng-eclipse--1210083994\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\LSP\AppData\Local\Temp\testng-eclipse--712700560\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -325,20 +323,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test_login')
 data.setCell(0, 2, 'signIn')
-data.setCell(0, 3, 66007);
+data.setCell(0, 3, 93277);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'openUrl')
 data.setCell(1, 2, 'signIn')
-data.setCell(1, 3, 14608);
+data.setCell(1, 3, 40716);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'openUrl')
 data.setCell(2, 2, 'BaseDriver$Login')
-data.setCell(2, 3, 8);
+data.setCell(2, 3, 5);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -376,20 +374,20 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">openUrl</span>
-                <span class="method-start">11574 ms</span>
+                <span class="method-start">107331 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">signIn</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">openUrl</span>
-                <span class="method-start">11608 ms</span>
+                <span class="method-start">107459 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">test_login</span>
-                <span class="method-start">26235 ms</span>
+                <span class="method-start">148182 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -398,7 +396,7 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">end</span>
-                <span class="method-start">92299 ms</span>
+                <span class="method-start">241802 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
